--- a/FlickrClient/Base.lproj/Main.storyboard
+++ b/FlickrClient/Base.lproj/Main.storyboard
@@ -97,51 +97,72 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title: NA " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xcT-xY-Whb">
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="ceB-Ij-zO7">
                                 <constraints>
                                     <constraint firstAttribute="width" constant="350" id="Pb6-IE-pDE"/>
-                                    <constraint firstAttribute="height" constant="200" id="fWB-4j-UGx"/>
+                                    <constraint firstAttribute="height" constant="250" id="fWB-4j-UGx"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description: NA " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BGp-cR-Neq">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NA" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BGp-cR-Neq">
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date Taken: NA " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K1Q-Yx-WF7">
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number of views: NA" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KWt-H4-b3Y">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NA" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K1Q-Yx-WF7">
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="Ekk-FD-34C"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description: " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0PQ-dq-0Ae">
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date Taken:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kzi-tG-eIo">
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number Of Views" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9fb-n1-E6C">
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NA" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KWt-H4-b3Y">
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="BGp-cR-Neq" secondAttribute="trailing" constant="1" id="1gG-vl-jDT"/>
                             <constraint firstItem="Ekk-FD-34C" firstAttribute="centerX" secondItem="gar-wE-jII" secondAttribute="centerX" id="2qW-pB-H2y"/>
+                            <constraint firstItem="kzi-tG-eIo" firstAttribute="top" secondItem="BGp-cR-Neq" secondAttribute="bottom" constant="10" id="3Ha-ja-5CG"/>
+                            <constraint firstItem="9fb-n1-E6C" firstAttribute="top" secondItem="K1Q-Yx-WF7" secondAttribute="bottom" constant="10" id="8UL-zp-0hU"/>
+                            <constraint firstItem="K1Q-Yx-WF7" firstAttribute="leading" secondItem="kzi-tG-eIo" secondAttribute="leading" constant="10" id="Aud-mE-QuA"/>
+                            <constraint firstItem="0PQ-dq-0Ae" firstAttribute="top" secondItem="ceB-Ij-zO7" secondAttribute="bottom" constant="40" id="BoL-zf-r1V"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="K1Q-Yx-WF7" secondAttribute="trailing" constant="1" id="C0a-Yf-i19"/>
+                            <constraint firstItem="9fb-n1-E6C" firstAttribute="leading" secondItem="kzi-tG-eIo" secondAttribute="leading" id="DEE-CM-z55"/>
                             <constraint firstAttribute="trailingMargin" secondItem="xcT-xY-Whb" secondAttribute="trailing" constant="1" id="Dg0-I5-5SK"/>
-                            <constraint firstItem="KWt-H4-b3Y" firstAttribute="trailing" secondItem="K1Q-Yx-WF7" secondAttribute="trailing" id="FaS-8h-EHI"/>
                             <constraint firstItem="xcT-xY-Whb" firstAttribute="centerX" secondItem="gar-wE-jII" secondAttribute="centerX" id="Kbh-ze-QE5"/>
-                            <constraint firstItem="BGp-cR-Neq" firstAttribute="top" secondItem="ceB-Ij-zO7" secondAttribute="bottom" constant="20" id="Xct-3D-uRK"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="KWt-H4-b3Y" secondAttribute="trailing" constant="1" id="MUR-Xm-zJm"/>
+                            <constraint firstItem="kzi-tG-eIo" firstAttribute="leading" secondItem="0PQ-dq-0Ae" secondAttribute="leading" id="SGO-c5-GQJ"/>
+                            <constraint firstItem="K1Q-Yx-WF7" firstAttribute="top" secondItem="kzi-tG-eIo" secondAttribute="bottom" constant="5" id="Y1U-gs-SWX"/>
                             <constraint firstItem="ceB-Ij-zO7" firstAttribute="top" secondItem="xcT-xY-Whb" secondAttribute="bottom" constant="20" id="Ybz-U4-kTs"/>
-                            <constraint firstItem="K1Q-Yx-WF7" firstAttribute="top" secondItem="BGp-cR-Neq" secondAttribute="bottom" constant="8" id="cUN-lB-DPP"/>
+                            <constraint firstItem="KWt-H4-b3Y" firstAttribute="top" secondItem="9fb-n1-E6C" secondAttribute="bottom" constant="5" id="Z4m-FR-hne"/>
+                            <constraint firstItem="KWt-H4-b3Y" firstAttribute="leading" secondItem="9fb-n1-E6C" secondAttribute="leading" constant="10" id="eum-vv-aSd"/>
                             <constraint firstItem="xcT-xY-Whb" firstAttribute="top" secondItem="g5G-ff-LUE" secondAttribute="bottom" constant="20" id="htl-Pn-Prb"/>
                             <constraint firstItem="xcT-xY-Whb" firstAttribute="leading" secondItem="gar-wE-jII" secondAttribute="leadingMargin" constant="1" id="kFO-Yk-RAT"/>
                             <constraint firstItem="Ekk-FD-34C" firstAttribute="centerY" secondItem="gar-wE-jII" secondAttribute="centerY" id="kq2-3C-aAo"/>
-                            <constraint firstItem="BGp-cR-Neq" firstAttribute="leading" secondItem="ceB-Ij-zO7" secondAttribute="leading" id="ksg-qA-wZy"/>
-                            <constraint firstItem="KWt-H4-b3Y" firstAttribute="leading" secondItem="K1Q-Yx-WF7" secondAttribute="leading" id="osE-CP-kTb"/>
-                            <constraint firstItem="K1Q-Yx-WF7" firstAttribute="trailing" secondItem="BGp-cR-Neq" secondAttribute="trailing" id="pMo-cz-iyZ"/>
-                            <constraint firstItem="KWt-H4-b3Y" firstAttribute="top" secondItem="K1Q-Yx-WF7" secondAttribute="bottom" constant="15" id="th2-W5-FCK"/>
+                            <constraint firstItem="BGp-cR-Neq" firstAttribute="leading" secondItem="0PQ-dq-0Ae" secondAttribute="leading" constant="10" id="lv4-qE-rW6"/>
+                            <constraint firstItem="BGp-cR-Neq" firstAttribute="top" secondItem="0PQ-dq-0Ae" secondAttribute="bottom" constant="5" id="mkD-1A-k0r"/>
+                            <constraint firstItem="0PQ-dq-0Ae" firstAttribute="leading" secondItem="ceB-Ij-zO7" secondAttribute="leading" id="pBm-Dy-L82"/>
                             <constraint firstItem="ceB-Ij-zO7" firstAttribute="centerX" secondItem="gar-wE-jII" secondAttribute="centerX" id="ugp-i9-DqX"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="BGp-cR-Neq" secondAttribute="trailing" id="w0u-bl-Tvg"/>
-                            <constraint firstItem="K1Q-Yx-WF7" firstAttribute="leading" secondItem="BGp-cR-Neq" secondAttribute="leading" id="xD1-ji-Mzd"/>
                         </constraints>
                     </view>
                     <connections>
