1. adding Network util to check connection 2. adding error messages in the service callbacks failure state 3. code refactoring

--- a/FlickrClient/Base.lproj/Main.storyboard
+++ b/FlickrClient/Base.lproj/Main.storyboard
@@ -144,18 +144,18 @@
                             <constraint firstItem="Ekk-FD-34C" firstAttribute="centerX" secondItem="gar-wE-jII" secondAttribute="centerX" id="2qW-pB-H2y"/>
                             <constraint firstItem="kzi-tG-eIo" firstAttribute="top" secondItem="BGp-cR-Neq" secondAttribute="bottom" constant="10" id="3Ha-ja-5CG"/>
                             <constraint firstItem="9fb-n1-E6C" firstAttribute="top" secondItem="K1Q-Yx-WF7" secondAttribute="bottom" constant="10" id="8UL-zp-0hU"/>
-                            <constraint firstItem="K1Q-Yx-WF7" firstAttribute="leading" secondItem="kzi-tG-eIo" secondAttribute="leading" constant="10" id="Aud-mE-QuA"/>
                             <constraint firstItem="0PQ-dq-0Ae" firstAttribute="top" secondItem="ceB-Ij-zO7" secondAttribute="bottom" constant="40" id="BoL-zf-r1V"/>
                             <constraint firstAttribute="trailingMargin" secondItem="K1Q-Yx-WF7" secondAttribute="trailing" constant="1" id="C0a-Yf-i19"/>
                             <constraint firstItem="9fb-n1-E6C" firstAttribute="leading" secondItem="kzi-tG-eIo" secondAttribute="leading" id="DEE-CM-z55"/>
                             <constraint firstAttribute="trailingMargin" secondItem="xcT-xY-Whb" secondAttribute="trailing" constant="1" id="Dg0-I5-5SK"/>
                             <constraint firstItem="xcT-xY-Whb" firstAttribute="centerX" secondItem="gar-wE-jII" secondAttribute="centerX" id="Kbh-ze-QE5"/>
+                            <constraint firstItem="K1Q-Yx-WF7" firstAttribute="leading" secondItem="BGp-cR-Neq" secondAttribute="leading" id="KvY-o6-jgk"/>
                             <constraint firstAttribute="trailingMargin" secondItem="KWt-H4-b3Y" secondAttribute="trailing" constant="1" id="MUR-Xm-zJm"/>
                             <constraint firstItem="kzi-tG-eIo" firstAttribute="leading" secondItem="0PQ-dq-0Ae" secondAttribute="leading" id="SGO-c5-GQJ"/>
                             <constraint firstItem="K1Q-Yx-WF7" firstAttribute="top" secondItem="kzi-tG-eIo" secondAttribute="bottom" constant="5" id="Y1U-gs-SWX"/>
                             <constraint firstItem="ceB-Ij-zO7" firstAttribute="top" secondItem="xcT-xY-Whb" secondAttribute="bottom" constant="20" id="Ybz-U4-kTs"/>
                             <constraint firstItem="KWt-H4-b3Y" firstAttribute="top" secondItem="9fb-n1-E6C" secondAttribute="bottom" constant="5" id="Z4m-FR-hne"/>
-                            <constraint firstItem="KWt-H4-b3Y" firstAttribute="leading" secondItem="9fb-n1-E6C" secondAttribute="leading" constant="10" id="eum-vv-aSd"/>
+                            <constraint firstItem="KWt-H4-b3Y" firstAttribute="leading" secondItem="K1Q-Yx-WF7" secondAttribute="leading" id="ar6-se-nWi"/>
                             <constraint firstItem="xcT-xY-Whb" firstAttribute="top" secondItem="g5G-ff-LUE" secondAttribute="bottom" constant="20" id="htl-Pn-Prb"/>
                             <constraint firstItem="xcT-xY-Whb" firstAttribute="leading" secondItem="gar-wE-jII" secondAttribute="leadingMargin" constant="1" id="kFO-Yk-RAT"/>
                             <constraint firstItem="Ekk-FD-34C" firstAttribute="centerY" secondItem="gar-wE-jII" secondAttribute="centerY" id="kq2-3C-aAo"/>
